# save_cracker_pi_pico_c

./: README.md  tresor.c
pi_base/: main.c
pi_pico/: CMakeLists.txt
